import groovy.json.JsonOutput

import java.time.Instant

plugins {
    id 'application'
    id 'io.github.ben-manes.versions' version '0.61.0'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'org.beryx.runtime' version '2.0.1'
}

group = 'at.esque.kafka'
version = '2.9.6'

repositories {
    mavenCentral()
    maven {
        url = 'https://packages.confluent.io/maven/'
    }
}

dependencies {
    implementation 'org.apache.kafka:kafka-clients:8.3.1-ce'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.22.1'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.22.1'
    implementation 'org.slf4j:slf4j-api:2.0.18'
    implementation 'ch.qos.logback:logback-core:1.6.2'
    implementation 'ch.qos.logback:logback-classic:1.6.2'
    implementation 'org.apache.commons:commons-lang3:3.20.0'
    implementation 'org.kordamp.ikonli:ikonli-javafx:12.4.0'
    implementation 'org.kordamp.ikonli:ikonli-fontawesome-pack:12.4.0'
    implementation 'com.opencsv:opencsv:5.12.0'
    implementation 'io.confluent:kafka-schema-registry-client:8.3.1'
    implementation 'io.confluent:kafka-avro-serializer:8.3.1'
    implementation 'io.confluent:kafka-protobuf-serializer:8.3.1'
    implementation 'org.apache.avro:avro:1.12.1'
    implementation 'com.google.inject:guice:7.0.0'
    implementation 'org.fxmisc.richtext:richtextfx:0.11.7'
    implementation 'net.thisptr:jackson-jq:1.6.0'
    implementation 'com.dlsc.formsfx:formsfx-core:11.6.0'
    implementation 'org.sourcelab:kafka-connect-client:4.0.5'
    implementation 'org.controlsfx:controlsfx:11.2.4'
    implementation 'com.squareup.okhttp3:okhttp:5.4.0'
    implementation 'com.flipkart.zjsonpatch:zjsonpatch:0.4.16'
    implementation 'tech.allegro.schema.json2avro:converter:0.3.0'
    implementation 'software.amazon.msk:aws-msk-iam-auth:2.3.7'

    testImplementation platform('org.junit:junit-bom:6.1.3')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

application {
    mainClass = 'at.esque.kafka.Launcher'
    applicationName = 'KafkaEsque'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.release = 25
    options.encoding = 'UTF-8'
    options.compilerArgs += ['-Xlint:deprecation', '-Xlint:unchecked']
}

javafx {
    version = '25.0.2'
    modules = ['javafx.controls', 'javafx.fxml']
}

runtime {
    options = ['--strip-debug', '--compress', 'zip-6', '--no-header-files', '--no-man-pages']
    modules = ['jdk.crypto.ec']
    additive = true
    launcher {
        noConsole = true
    }
    jpackage {
        imageName = 'KafkaEsque'

        def osName = System.getProperty('os.name').toLowerCase(Locale.ROOT)
        def isWindows = osName.contains('windows')
        def isMacOs = osName.contains('mac')
        def isLinux = osName.contains('linux')
        def imgType = isWindows ? 'ico' : isMacOs ? 'icns' : 'png'

        jvmArgs += ['-Dprism.dirtyopts=false']
        imageOptions += ['--icon', "src/main/resources/icons/package/KafkaEsque.$imgType"]
        installerOptions += ['--resource-dir', "src/main/resources"]
        installerOptions += ['--vendor', 'Patrick Schuh']

        if (isWindows) {
            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
        } else if (isLinux) {
            installerOptions += ['--linux-package-name', 'kafkaesque', '--linux-shortcut']
        } else if (isMacOs) {
            installerOptions += ['--mac-package-name', 'kafkaesque']
        }
    }
}

def generatedVersionFile = layout.buildDirectory.file('generated-resources/version/version.json')
def applicationVersion = version.toString()

tasks.register('versionFile') {
    outputs.file(generatedVersionFile)
    doLast {
        def git = { List<String> arguments ->
            providers.exec {
                commandLine(['git'] + arguments)
                ignoreExitValue = true
            }.standardOutput.asText.get().trim()
        }
        def exactTag = git(['tag', '--points-at', 'HEAD']).readLines().find()
        def versionInfo = [
                version : applicationVersion,
                revision: git(['rev-parse', '--short', 'HEAD']),
                tag     : exactTag,
                buildTime: Instant.now().toString(),
                buildJvm: "${System.getProperty('java.vendor')} ${System.getProperty('java.version')}",
                name    : 'KafkaEsque'
        ]
        def outputFile = generatedVersionFile.get().asFile
        outputFile.parentFile.mkdirs()
        outputFile.text = JsonOutput.prettyPrint(JsonOutput.toJson(versionInfo))
    }
}

test {
    useJUnitPlatform()
}

sourceSets.main.resources.srcDir(layout.buildDirectory.dir('generated-resources/version'))
tasks.named('processResources') { dependsOn('versionFile') }
tasks.named('jpackageImage') { dependsOn('runtime') }
